--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-source-contentful": "^2.1.14",
+    "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-source-contentful": "^2.1.16",
     "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-source-sanity": "^1.0.4",
-    "gatsby-transformer-json": "^2.1.8",
-    "gatsby-transformer-sharp": "^2.1.13",
+    "gsap": "^2.1.3",
     "node-sass": "^4.12.0",
     "react": "^16.8.1",
     "react-bootstrap": "^1.0.0-beta.9",
-    "react-dom": "^16.8.1"
+    "react-burger-menu": "^2.6.10",
+    "react-dom": "^16.8.1",
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.2.1"
   },
   "repository": {
     "type": "git",
