--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.0.0",
     "gatsby": "^2.1.0",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-layout": "^1.1.2",
     "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sharp": "^2.0.20",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-source-contentful": "^2.1.16",
     "gatsby-source-filesystem": "^2.0.20",
@@ -28,7 +31,8 @@
     "react-burger-menu": "^2.6.10",
     "react-dom": "^16.8.1",
     "react-spring": "^8.0.27",
-    "react-transition-group": "^4.2.1"
+    "react-transition-group": "^4.2.1",
+    "styled-components": "^4.3.2"
   },
   "repository": {
     "type": "git",
