--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.0.0",
     "gatsby": "^2.13.60",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-layout": "^1.1.3",
     "gatsby-plugin-sass": "^2.1.8",
     "gatsby-plugin-sharp": "^2.2.11",
