--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.0.0",
     "gatsby": "^2.13.60",
     "gatsby-image": "^2.2.8",
+    "gatsby-link": "^2.2.5",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-layout": "^1.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
